2000-12-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: fixed --disable-long-long-warnings

2000-12-18  Christoph Reichenbach  <jameson@linuxgames.com>

	* Applied the Alpha/Debian/cxx patch, updated README.Alpha
	* Many files now include "alpha_kludges.h"
	* hash_maps and hash_sets are now used iff DONT_HAVE_HASH_MAP/
	DONT_HAVE_HASH_SET are /not/ defined. Those are #defined in
	alpha_kludges.h iff HAVE_CONFIG_H is defined and the hash_map
	and hash_set header files were found during configure time.
	* Misc. int/long int -> u?int32 fixes all over the place
	* configure.in: added --disable-long-long-warnings

2000-12-18  Jeff Freedman  <jeff@amy.nerble.net>

	* Shape dragging uses shape as its icon.
	* Add objects that are dragged.

2000-12-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* conf/Configuration.cc: moved BeOS config file to ~/config/settings/

2000-12-14  Jeff Freedman  <jeff@amy.nerble.net>

	* Schec. usecode opcode 0x56 means:  play speech track.

2000-12-14  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in: Fill out GTK+ discovery stuff
	* Makefile.am, mapedit/Makefile.am: automake stuff for above
	* mapedit/.cvsignore: added shapetest

2000-12-13  Jeff Freedman  <jeff@amy.nerble.net>
	* Adding drag-and-drop support (but not working yet).

2000-12-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* drag.cc: fixed 'hack-moving monsters crash' bug
	re-center screen when hack-moving yourself,
	allow stealing while in hack-mover
	* exult.cc, audio/soundtest.cc: fixed scoll rendering bug

2000-12-12  Willem Jan Palnestijn <palenstijn@wanadoo.nl>
	* mapedit/.cvsignore: added
	* .cvsignore: added u7midi

2000-12-11  Max Horn  <max@quendi.de>
	* lots-o-files: applied some of the changes from Christoph Reichenbach <jameson@linuxgames.com>
	  I didn't incorporate all changes yet, though.
	* exult.cc: on mac, META (=Command key) is now used instead of ALT

2000-12-11  Max Horn  <max@quendi.de>